--- a/animal_matching_game/src/components/style.css
+++ b/animal_matching_game/src/components/style.css
@@ -5,3 +5,8 @@
     border: 5px solid orange;
     display: inline-block; 
 }
+.table{
+    height: 500px;
+    width: 99%;
+    border-color: orange;
+}
