--- a/animal_matching_game/src/components/style.css
+++ b/animal_matching_game/src/components/style.css
@@ -5,8 +5,20 @@
     border: 5px solid orange;
     display: inline-block; 
 }
-.table{
-    height: 500px;
-    width: 99%;
-    border-color: orange;
+.left{
+    flex:2;
+    height: 700px;
+    border: 5px solid orange;
+
+
+}
+.right{
+    flex:2;
+    border: 5px solid orange;
+
+}
+.content{
+    flex:4;
+    border: 5px solid orange;
+
 }
