--- a/animal_matching_game/src/components/style.css
+++ b/animal_matching_game/src/components/style.css
@@ -1,24 +1,33 @@
 .header{
     text-align: center;
-    width:99%;
+    width:99.5%;
     height: 20%;
-    border: 5px solid orange;
+    border: 3px solid orange;
     display: inline-block; 
 }
 .left{
-    flex:2;
+    width:20%;
+    text-align: center;
     height: 700px;
-    border: 5px solid orange;
+    display: inline-block; 
+    border: 3px solid orange;
+    
 
 
 }
 .right{
-    flex:2;
-    border: 5px solid orange;
+    width:59%;;
+    text-align: center;
+    height: 700px;
+    border: 3px solid orange;
+    display: inline-block;
 
 }
 .content{
-    flex:4;
-    border: 5px solid orange;
+    width:20%;
+    text-align: center;
+    height: 700px;
+    border: 3px solid orange;
+    display: inline-block;
 
 }
