--- a/animal_matching_game/src/components/style.css
+++ b/animal_matching_game/src/components/style.css
@@ -21,8 +21,11 @@
     height: 1000px;
     border: 3px solid orange;
     display: inline-block;
-    background-color: rgb(100, 177, 232);
+   
 
+}
+.img{
+    background-color: rgb(100, 177, 232);
 }
 .content{
     width:15%;
