--- a/animal_matching_game/src/components/style.css
+++ b/animal_matching_game/src/components/style.css
@@ -9,18 +9,21 @@
     width:15%;
     text-align: center;
     height: 1000px;
-    display: inline-block; 
+    /*display: inline-block;*/ 
     border: 3px solid orange;
-    
+   
 
 
 }
 .right{
-    width:69%;;
+    width:68%;;
     text-align: center;
     height: 1000px;
     border: 3px solid orange;
-    display: inline-block;
+    /*display: inline-block;*/
+    margin-left: 30.8%;
+    margin-top: -1007px;
+
    
 
 }
@@ -32,6 +35,8 @@
     text-align: center;
     height: 1000px;
     border: 3px solid orange;
-    display: inline-block;
+    margin-left: 15.1%;
+    margin-top: -1005px;
+   /* display: inline-block;*/
 
 }
